--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang='en'>
 <head>
   <meta charset='UTF-8'>
-  <meta name='viewport'
-        content='width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0'>
-  <meta http-equiv='X-UA-Compatible' content='ie=edge'>
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css'>
-  <link rel='stylesheet' href='assets/styles/styles.css'>
-  <link rel='preconnect' href='https://fonts.googleapis.com'>
-  <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin>
+  <meta content='width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0'
+        name='viewport'>
+  <meta content='ie=edge' http-equiv='X-UA-Compatible'>
+  <link href='https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css' rel='stylesheet'>
+  <link href='assets/styles/styles.css' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com' rel='preconnect'>
+  <link crossorigin href='https://fonts.gstatic.com' rel='preconnect'>
   <link href='https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap'
         rel='stylesheet'>
   <title>Art Beauty</title>
@@ -19,7 +19,7 @@
     <nav class='nav'>
       <div class='nav__logo'>
         <a href='index.html'>
-          <img src='./assets/images/logo.png' alt='Art Beauty Logo'>
+          <img alt='Art Beauty Logo' src='assets/images/logo.png'>
         </a>
       </div>
       <div class='nav__info'>
@@ -28,21 +28,21 @@
 пр. Просвещения, д.33, корп.2</span>
       </div>
       <div class='social'>
-        <a href='https://vk.com'>
-          <img src='./assets/images/icons/vk.svg' alt='vk'>
+        <a href='https://vk.com' target='_blank'>
+          <img alt='vk' src='assets/images/social/vk.svg'>
         </a>
-        <a href='https://instagram.com'>
-          <img src='./assets/images/icons/instagram.svg' alt='instagram'>
+        <a href='https://instagram.com' target='_blank'>
+          <img alt='instagram' src='assets/images/social/instagram.svg'>
         </a>
-        <a href='https://whatsapp.com'>
-          <img src='./assets/images/icons/whatsapp.svg' alt='wa'>
+        <a href='https://whatsapp.com' target='_blank'>
+          <img alt='wa' src='assets/images/social/whatsapp.svg'>
         </a>
       </div>
       <div class='phone-number'>
-        <a href='tel: 0000'>
-          <span>+7 (921) 967-61-88</span>
+        <a href='tel:0000'>
+          <span class='number'>+7 (921) 967-61-88</span>
         </a>
-        <span>
+        <span class='desc'>
           ЗАКАЗАТЬ ОБРАТНЫЙ ЗВОНОК
         </span>
       </div>
@@ -55,6 +55,16 @@
       <p class='title-desc'>
         Позвольте себе выглядеть моложе на <span>5 лет</span>
       </p>
+      <div class='check-in'>
+        <img alt='' src='./assets/images/checkin-btn/circle1.svg'>
+        <img alt='' src='./assets/images/checkin-btn/circle2.svg'>
+        <span></span>
+        <button>Записаться</button>
+      </div>
+    </div>
+    <div class='dots-info'>
+      <img alt='marketing' class='circle-text' src='./assets/images/circle-text.svg'>
+      <span class='white-dot'></span>
     </div>
   </div>
 </header>
