--- a/index.html
+++ b/index.html
@@ -68,5 +68,21 @@
     </div>
   </div>
 </header>
+<section class='clients'>
+  <div class='clients-wrapper'>
+    <div class='clients-header'>
+      <div class='clients-title'>
+        <h2>Наши клиенты</h2>
+        <h3>всегда в восторге</h3>
+      </div>
+      <div class='clients-controls'>
+        <button class='left-btn' data-dir='left' data-type='slider'>‹</button>
+        <button class='right-btn' data-dir='right' data-type='slider'>›</button>
+      </div>
+    </div>
+    <div class='clients-slider'></div>
+  </div>
+</section>
+<script src='./assets/scripts/clients-coursel.js' type='module'></script>
 </body>
 </html>
