--- a/index.html
+++ b/index.html
@@ -68,6 +68,28 @@
     </div>
   </div>
 </header>
+<section class='procedure-form'>
+  <div class='form-wrapper'>
+    <div class='form-title'>
+      <h2>Станьте моложе 5 лет за 1 процедуру</h2>
+      <h3>Запишитесь на процедуру и получите рекомендации от Доктора Медицинских Наук по нитевым
+        методикам для вашего лица бесплатно!
+      </h3>
+    </div>
+    <form id='promo-form'>
+      <label for='promo-name'>
+        <input id='promo-name' name='promo-name' placeholder='ВАШЕ ИМЯ' type='text'>
+      </label>
+      <label for='promo-tel'>
+        <input id='promo-tel' name='promo-tel' placeholder='ВАШЕ ТЕЛЕФОН' type='tel'>
+      </label>
+      <button class='submit-btn' type='submit'>записаться со скидкой</button>
+    </form>
+  </div>
+  <div class='procedure-promo'>
+    <img alt='desc' src='assets/images/procedure-promo-desc.png'>
+  </div>
+</section>
 <section class='clients'>
   <div class='clients-wrapper'>
     <div class='clients-header'>
