--- a/index.html
+++ b/index.html
@@ -105,6 +105,36 @@
     <div class='clients-slider'></div>
   </div>
 </section>
+<footer class='footer'>
+  <div class='footer-wrapper'>
+    <div class='footer-logo'>
+      <img alt='Art Beauty Logo' src='assets/images/logo.png'>
+      <span>Нитевой лифтинг лица в Санкт-Петербурге</span>
+    </div>
+    <div class='footer-menu'>
+      <h3>Меню</h3>
+      <ul>
+        <li><a href='#'>Стоимость онлайн</a></li>
+        <li><a href='#'>О компании</a></li>
+        <li><a href='#'>О компании</a></li>
+        <li><a href='#'>Фото салона</a></li>
+        <li><a href='#'>Специалисты</a></li>
+        <li><a href='#'>Контакты</a></li>
+      </ul>
+    </div>
+    <div class='footer-contacts'>
+      <h3>Контакты</h3>
+    </div>
+    <div class='footer-phone'>
+
+    </div>
+  </div>
+  <div class='footer-copyrights'>
+    <span class='copyrights'>© 2020 ART Beauty. Все права защищаны.</span>
+    <span class='politics'>Политика конфиденциальности</span>
+  </div>
+</footer>
 <script src='./assets/scripts/clients-coursel.js' type='module'></script>
+<script src='./assets/scripts/form-procedure.js' type='module'></script>
 </body>
 </html>
