add: part of problems section

--- a/index.html
+++ b/index.html
@@ -68,6 +68,49 @@
     </div>
   </div>
 </header>
+<section class='problems'>
+  <div class='problems-banner'>
+    <img alt='problems' class='banner-img' src='assets/images/problems/problems-banner.png'>
+    <img alt='problems' class='problem-text' src='assets/images/problems/problem-text.svg'>
+    <div class='rectangle'></div>
+  </div>
+  <div class='problems-solution'>
+    <div class='problems-header'>
+      <h2>какие</h2>
+      <h2 class='header-problems'>проблемы</h2>
+      <h3 class='header-procedure'>решает процедура</h3>
+    </div>
+    <div class='solutions'>
+      <ul>
+        <li>
+          <img alt='solution1' src='assets/images/problems/problems-icon1.svg'>
+          <span>Мелкие и глубокие морщины</span>
+        </li>
+        <li>
+          <img alt='solution2' src='assets/images/problems/problems-icon2.svg'>
+          <span>Обвисание кожи и нечеткий овал</span>
+        </li>
+        <li>
+          <img alt='solution3' src='assets/images/problems/problems-icon3.svg'>
+          <span>Носогубные складки</span>
+        </li>
+        <li>
+          <img alt='solution4' src='assets/images/problems/problems-icon4.svg'>
+          <span>Наличие брылей и второго подбородка</span>
+        </li>
+        <li>
+          <img alt='solution5' src='assets/images/problems/problems-icon5.svg'>
+          <span>Опущение кончиков губ и бровей</span>
+        </li>
+        <li>
+          <img alt='solution6' src='assets/images/problems/problems-icon6.svg'>
+          <span>Ассиметрия лица</span>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <img alt='background dots' class='background-dots' src='assets/images/bg-dots.svg'>
+</section>
 <section class='procedure-form'>
   <div class='form-wrapper'>
     <div class='form-title'>
@@ -124,9 +167,41 @@
     </div>
     <div class='footer-contacts'>
       <h3>Контакты</h3>
+      <div class='contact-address'>
+        <span>Санкт-Петербург,</span>
+        <span>пр. Просвещения, д.33, корп.2</span>
+        <a href='https://yandex.ru/maps/org/art_beauty/1638898967/?ll=30.342101%2C60.049722&z=17.09' target='_blank'>
+          Посмотреть на карте
+        </a>
+      </div>
+      <div class='contact-mail'>
+        <h4>Эл. почта</h4>
+        <a href='mailto:artbeauty@inbox.ru'>artbeauty@inbox.ru</a>
+      </div>
+      <div class='contact-social'>
+        <h4>Соц сети:</h4>
+        <ul>
+          <li>
+            <a href='https://facebook.com'><img alt='Facebook' src='assets/images/footer/footer-fb.svg'></a>
+          </li>
+          <li>
+            <a href='https://vk.com'><img alt='VK' src='assets/images/footer/footer-vk.svg'></a>
+          </li>
+          <li>
+            <a href='https://instagram.com'><img alt='Instagram' src='assets/images/footer/footer-insagram.svg'></a>
+          </li>
+        </ul>
+      </div>
     </div>
     <div class='footer-phone'>
-
+      <h3>Телефон:</h3>
+      <a href='tel:+79219676188'>
+        <span>+7 (921) 967-61-88</span>
+      </a>
+      <a href='tel:+78129676188'>
+        <span class='tel-two'>+7 (812) 967-61-88</span>
+      </a>
+      <a href='#'>ЗАКАЗАТЬ ОБРАТНЫЙ ЗВОНОК</a>
     </div>
   </div>
   <div class='footer-copyrights'>
