add: mobile adaptive header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <header class='header'>
-  <div class='header-wrapper'>
+  <div class='header__wrapper'>
     <nav class='nav'>
       <div class='nav__logo'>
         <a href='index.html'>
@@ -23,11 +23,11 @@
         </a>
       </div>
       <div class='nav__info'>
-        <span class='about'>Нитевой лифтинг лица в Санкт-Петербурге</span>
-        <span class='address'>Санкт-Петербург,
+        <span class='nav__about'>Нитевой лифтинг лица в Санкт-Петербурге</span>
+        <span class='nav_address'>Санкт-Петербург,
 пр. Просвещения, д.33, корп.2</span>
       </div>
-      <div class='social'>
+      <div class='nav__social'>
         <a href='https://vk.com' target='_blank'>
           <img alt='vk' src='assets/images/social/vk.svg'>
         </a>
@@ -38,33 +38,33 @@
           <img alt='wa' src='assets/images/social/whatsapp.svg'>
         </a>
       </div>
-      <div class='phone-number'>
+      <div class='nav__phone'>
         <a href='tel:0000'>
-          <span class='number'>+7 (921) 967-61-88</span>
+          <span class='nav__number'>+7 (921) 967-61-88</span>
         </a>
-        <span class='desc'>
+        <span class='nav__desc'>
           ЗАКАЗАТЬ ОБРАТНЫЙ ЗВОНОК
         </span>
       </div>
     </nav>
-    <div class='main'>
-      <div class='title'>
+    <main class='main'>
+      <div class='main__title'>
         <h1>Нитевой</h1>
         <span>лифтинг  кожи лица  и  шеи</span>
       </div>
-      <p class='title-desc'>
+      <p class='main__desc'>
         Позвольте себе выглядеть моложе на <span>5 лет</span>
       </p>
-      <div class='check-in'>
+      <div class='main__checkin'>
         <img alt='' src='./assets/images/checkin-btn/circle1.svg'>
         <img alt='' src='./assets/images/checkin-btn/circle2.svg'>
         <span></span>
         <button>Записаться</button>
       </div>
-    </div>
-    <div class='dots-info'>
-      <img alt='marketing' class='circle-text' src='./assets/images/circle-text.svg'>
-      <span class='white-dot'></span>
+    </main>
+    <div class='header__bg'>
+      <img alt='marketing' class='header__circle-text' src='./assets/images/circle-text.svg'>
+      <span class='header__bg-dots'></span>
     </div>
   </div>
 </header>
