add: adaptive procedure block

--- a/index.html
+++ b/index.html
@@ -111,15 +111,15 @@
   </div>
   <img alt='background dots' class='background-dots' src='assets/images/bg-dots.svg'>
 </section>
-<section class='procedure-form'>
-  <div class='form-wrapper'>
-    <div class='form-title'>
-      <h2>Станьте моложе 5 лет за 1 процедуру</h2>
+<section class='procedure'>
+  <div class='procedure__wrapper'>
+    <div class='procedure__title'>
+      <h2>Станьте моложе на 5 лет за 1 процедуру</h2>
       <h3>Запишитесь на процедуру и получите рекомендации от Доктора Медицинских Наук по нитевым
         методикам для вашего лица бесплатно!
       </h3>
     </div>
-    <form id='promo-form'>
+    <form class='procedure__form' id='promo-form'>
       <label for='promo-name'>
         <input id='promo-name' name='promo-name' placeholder='ВАШЕ ИМЯ' type='text'>
       </label>
@@ -129,7 +129,7 @@
       <button class='submit-btn' type='submit'>записаться со скидкой</button>
     </form>
   </div>
-  <div class='procedure-promo'>
+  <div class='procedure__banner'>
     <img alt='desc' src='assets/images/procedure-promo-desc.png'>
   </div>
 </section>
