add: footer mobile

--- a/index.html
+++ b/index.html
@@ -149,12 +149,12 @@
   </div>
 </section>
 <footer class='footer'>
-  <div class='footer-wrapper'>
-    <div class='footer-logo'>
+  <div class='footer__wrapper'>
+    <div class='footer__logo'>
       <img alt='Art Beauty Logo' src='assets/images/logo.png'>
       <span>Нитевой лифтинг лица в Санкт-Петербурге</span>
     </div>
-    <div class='footer-menu'>
+    <div class='footer__menu'>
       <h3>Меню</h3>
       <ul>
         <li><a href='#'>Стоимость онлайн</a></li>
@@ -165,20 +165,20 @@
         <li><a href='#'>Контакты</a></li>
       </ul>
     </div>
-    <div class='footer-contacts'>
+    <div class='footer__contacts'>
       <h3>Контакты</h3>
-      <div class='contact-address'>
+      <div class='footer__address'>
         <span>Санкт-Петербург,</span>
         <span>пр. Просвещения, д.33, корп.2</span>
         <a href='https://yandex.ru/maps/org/art_beauty/1638898967/?ll=30.342101%2C60.049722&z=17.09' target='_blank'>
           Посмотреть на карте
         </a>
       </div>
-      <div class='contact-mail'>
+      <div class='footer__mail'>
         <h4>Эл. почта</h4>
         <a href='mailto:artbeauty@inbox.ru'>artbeauty@inbox.ru</a>
       </div>
-      <div class='contact-social'>
+      <div class='footer__socials'>
         <h4>Соц сети:</h4>
         <ul>
           <li>
@@ -193,7 +193,7 @@
         </ul>
       </div>
     </div>
-    <div class='footer-phone'>
+    <div class='footer__phone'>
       <h3>Телефон:</h3>
       <a href='tel:+79219676188'>
         <span>+7 (921) 967-61-88</span>
@@ -201,12 +201,12 @@
       <a href='tel:+78129676188'>
         <span class='tel-two'>+7 (812) 967-61-88</span>
       </a>
-      <a href='#'>ЗАКАЗАТЬ ОБРАТНЫЙ ЗВОНОК</a>
+      <a class='footer__callback' href='#'>ЗАКАЗАТЬ ОБРАТНЫЙ ЗВОНОК</a>
     </div>
   </div>
-  <div class='footer-copyrights'>
-    <span class='copyrights'>© 2020 ART Beauty. Все права защищаны.</span>
-    <span class='politics'>Политика конфиденциальности</span>
+  <div class='footer__copyright'>
+    <span class='footer__copyrights'>© 2020 ART Beauty. Все права защищаны.</span>
+    <span class='footer__politics'>Политика конфиденциальности</span>
   </div>
 </footer>
 <script src='./assets/scripts/clients-coursel.js' type='module'></script>
