add: problems sections full

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       <p class='main__desc'>
         Позвольте себе выглядеть моложе на <span>5 лет</span>
       </p>
-      <div class='main__checkin'>
-        <img alt='' src='./assets/images/checkin-btn/circle1.svg'>
-        <img alt='' src='./assets/images/checkin-btn/circle2.svg'>
+      <div class='appointment-btn'>
+        <img alt='' src='assets/images/appointment-btn/white/circle1.svg'>
+        <img alt='' src='assets/images/appointment-btn/white/circle2.svg'>
         <span></span>
         <button>Записаться</button>
       </div>
@@ -69,18 +69,16 @@
   </div>
 </header>
 <section class='problems'>
-  <div class='problems-banner'>
-    <img alt='problems' class='banner-img' src='assets/images/problems/problems-banner.png'>
-    <img alt='problems' class='problem-text' src='assets/images/problems/problem-text.svg'>
-    <div class='rectangle'></div>
+  <div class='problems__banner'>
+    <img alt='problems' class='problems__banner-img' src='assets/images/problems/problems-banner.png'>
+    <img alt='problems' class='problems__banner-text' src='assets/images/problems/problem-text.svg'>
+    <div class='problems__banner-rectangle'></div>
   </div>
-  <div class='problems-solution'>
-    <div class='problems-header'>
-      <h2>какие</h2>
-      <h2 class='header-problems'>проблемы</h2>
-      <h3 class='header-procedure'>решает процедура</h3>
-    </div>
-    <div class='solutions'>
+  <div class='problems__solution'>
+    <h1>какие</h1>
+    <h2 class='header-problems'>проблемы</h2>
+    <h3 class='header-procedure'>решает процедура</h3>
+    <div class='problems__solutions'>
       <ul>
         <li>
           <img alt='solution1' src='assets/images/problems/problems-icon1.svg'>
@@ -108,8 +106,15 @@
         </li>
       </ul>
     </div>
+    <div class='appointment-btn'>
+      <img alt='' src='assets/images/appointment-btn/dust/circle1.svg'>
+      <img alt='' src='assets/images/appointment-btn/dust/circle2.svg'>
+      <span></span>
+      <button>Записаться</button>
+    </div>
   </div>
   <img alt='background dots' class='background-dots' src='assets/images/bg-dots.svg'>
+  <img alt='line' class='problems__line' src='assets/images/problems/problems-line.svg'>
 </section>
 <section class='procedure'>
   <div class='procedure__wrapper'>
