add: responsive and adaptive for entire website

--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
         </a>
       </div>
       <div class='nav__phone'>
-        <a href='tel:0000'>
-          <span class='nav__number'>+7 (921) 967-61-88</span>
-        </a>
+        <a class='nav__number' href='tel:0000'>+7 (921) 967-61-88</a>
         <span class='nav__desc'>
           ЗАКАЗАТЬ ОБРАТНЫЙ ЗВОНОК
         </span>
@@ -64,9 +62,9 @@
         <button>Записаться</button>
       </div>
     </main>
-    <div class='header__bg'>
-      <img alt='marketing' class='header__circle-text' src='./assets/images/circle-text.svg'>
-      <span class='header__bg-dots'></span>
+    <div class='header__background'>
+      <img alt='marketing' class='header__background-text' src='./assets/images/circle-text.svg'>
+      <span class='header__background-img'></span>
     </div>
   </div>
 </header>
