add: init example page

--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@
     <img alt='desc' src='assets/images/procedure-promo-desc.png'>
   </div>
 </section>
+<section class='example'>
+  <div class='example__wrapper'>
+
+  </div>
+</section>
 <section class='clients'>
   <div class='clients__wrapper'>
     <div class='clients__header'>
