feat: example page with comp slider and more responsive/adaptive

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta content='width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0'
         name='viewport'>
   <meta content='ie=edge' http-equiv='X-UA-Compatible'>
-  <link href='https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css' rel='stylesheet'>
   <link href='assets/styles/styles.css' rel='stylesheet'>
   <link href='https://fonts.googleapis.com' rel='preconnect'>
   <link crossorigin href='https://fonts.gstatic.com' rel='preconnect'>
@@ -118,6 +117,61 @@
   <img alt='background dots' class='background-dots' src='assets/images/bg-dots.svg'>
   <img alt='line' class='problems__line' src='assets/images/problems/problems-line.svg'>
 </section>
+<section class='example'>
+  <div class='example__wrapper'>
+    <div class='example__title'>
+      <h1>Преимущества процедуры</h1>
+    </div>
+    <div class='example__features'>
+      <ul>
+        <li>
+          <img alt='clock' src='assets/images/example/feature-icons/clock.svg'>
+          <h5>Скорость</h5>
+          <p>Введение нитей редко длится более получаса, а потому уже вскоре вы получите заветный эффект.</p>
+        </li>
+        <li>
+          <img alt='surge' src='assets/images/example/feature-icons/surge.svg'>
+          <h5>Не нужен наркоз</h5>
+          <p>Достаточно местной анестезии, что существенно сокращает всевозможные риски, связанные с мощными
+            анестетиками.</p>
+        </li>
+        <li>
+          <img alt='face' src='assets/images/example/feature-icons/face.svg'>
+          <h5>Нет вредя для здоровья</h5>
+          <p>Введение нитей абсолютно безопасно. Процедура не несет существенной нагрузки на организм.</p>
+        </li>
+        <li>
+          <img alt='eye' src='assets/images/example/feature-icons/eye.svg'>
+          <h5>Быстрый эффект</h5>
+          <p>Сразу после процедуры будут заметны изменения.</p>
+        </li>
+      </ul>
+    </div>
+    <div class='example__slider-appointment'>
+      <div class='example__slider'>
+        <img-comparison-slider handle='true' keyboard='disabled'>
+          <img alt='before' slot='first' src='assets/images/example/before.png' />
+          <img alt='after' slot='second' src='assets/images/example/after.png' />
+          <img alt='' slot='handle' src='assets/images/example/divider.svg'>
+        </img-comparison-slider>
+        <img alt='after' class='example__slider-after' src='assets/images/example/after-text.png'>
+      </div>
+      <div class='example__appointment'>
+        <h2>Примеры</h2>
+        <h3>работ </h3>
+        <p>Устойчивый результат, гладкая кожа от <span>4х до 5 лет</span></p>
+        <div class='appointment-btn'>
+          <img alt='' src='assets/images/appointment-btn/dust/circle1.svg'>
+          <img alt='' src='assets/images/appointment-btn/dust/circle2.svg'>
+          <span></span>
+          <button>Записаться</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <img alt='line' class='example__line' src='assets/images/example/example-line.png'>
+  <img alt='background-dots' class='example__background-dots' src='assets/images/bg-dots.svg'>
+</section>
 <section class='procedure'>
   <div class='procedure__wrapper'>
     <div class='procedure__title'>
@@ -138,18 +192,6 @@
   </div>
   <div class='procedure__banner'>
     <img alt='desc' src='assets/images/procedure-promo-desc.png'>
-  </div>
-</section>
-<section class='example'>
-  <div class='example__wrapper'>
-    <div class='example__title'></div>
-    <div class='example__features'></div>
-    <div class='example__slider'>
-      <img-comparison-slider>
-        <img alt='before' slot='first' src='assets/images/example/before.png' />
-        <img alt='after' slot='second' src='assets/images/example/after.png' />
-      </img-comparison-slider>
-    </div>
   </div>
 </section>
 <section class='clients'>
