--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
       </div>
       <div class='nav__info'>
         <span class='nav__about'>Нитевой лифтинг лица в Санкт-Петербурге</span>
-        <span class='nav_address'>Санкт-Петербург,
-пр. Просвещения, д.33, корп.2</span>
+        <a class='nav_address' href='https://yandex.ru/maps/org/art_beauty/1638898967/?ll=30.342101%2C60.049722&z=17'
+           target='_blank'>Санкт-Петербург,
+          пр. Просвещения, д.33, корп.2</a>
       </div>
       <div class='nav__social'>
         <a href='https://vk.com' target='_blank'>
@@ -269,7 +270,7 @@
   </div>
   <div class='footer__copyright'>
     <span class='footer__copyrights'>© 2020 ART Beauty. Все права защищаны.</span>
-    <span class='footer__politics'>Политика конфиденциальности</span>
+    <a class='footer__politics' href='#'>Политика конфиденциальности</a>
   </div>
 </footer>
 <script src='assets/scripts/swiperClientsConfig.js' type='module'></script>
