--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       <img alt='marketing' class='header__background-text' src='./assets/images/circle-text.svg'>
       <span class='header__background-img'></span>
     </div>
+    <button class='sidebar-btn' id='sidebar-btn'></button>
   </div>
 </header>
 <section class='problems'>
@@ -290,8 +291,37 @@
     </form>
   </div>
 </div>
+<div class='sidenav' id='sidenav'>
+  <div class='sidenav__wrapper'>
+    <button class='close__sidenav' id='close-sidenav'>&#10005;</button>
+    <div class='sidenav__menu'>
+      <h3>Меню</h3>
+      <ul>
+        <li><a href='#'>Стоимость онлайн</a></li>
+        <li><a href='#'>О компании</a></li>
+        <li><a href='#'>О компании</a></li>
+        <li><a href='#'>Фото салона</a></li>
+        <li><a href='#'>Специалисты</a></li>
+        <li><a href='#'>Контакты</a></li>
+      </ul>
+    </div>
+    <div class='sidenav__social'>
+      <a href='https://vk.com' target='_blank'>
+        <img alt='vk' src='assets/images/social/vk.svg'>
+      </a>
+      <a href='https://instagram.com' target='_blank'>
+        <img alt='instagram' src='assets/images/social/instagram.svg'>
+      </a>
+      <a href='https://whatsapp.com' target='_blank'>
+        <img alt='wa' src='assets/images/social/whatsapp.svg'>
+      </a>
+    </div>
+    <span class='sidenav__copyright'>© 2020 ART Beauty</span>
+  </div>
+</div>
 <script src='assets/scripts/swiperClientsConfig.js' type='module'></script>
 <script src='assets/scripts/forms.js' type='module'></script>
 <script src='assets/scripts/modal.js' type='module'></script>
+<script src='assets/scripts/sidenav.js' type='module'></script>
 </body>
 </html>
